--- a/src/lib/templates/receipt.html
+++ b/src/lib/templates/receipt.html
@@ -129,6 +129,10 @@
         <td class="value">{{customerName}}</td>
       </tr>
       <tr>
+        <td class="label">Lendor Name:</td>
+        <td class="value">{{lendorName}}</td>
+      </tr>
+      <tr>
         <td class="label">Loan Reference:</td>
         <td class="value">{{loanRef}}</td>
       </tr>
